[tool.poetry]
name = "predict"
version = "0.1.0"
description = ""
authors = ["Nicky Pochinkov <work@nicky.pro>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
taker = "^1.0.2"
hqq = "^0.1.8"
bitsandbytes = "^0.43.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
